Fix asset references given new project baseurl

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="header">
 	<a href="{{ site.baseurl }}">
-		<img src="jekyll_img/emerald.svg"  alt="Emerald Logo">
+    <img src="{{ site.baseurl }}/jekyll_img/emerald.svg"  alt="Emerald Logo">
 	  <h1>David's Blog</h1>
 	</a>
 </header>
