--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,2 +1,3 @@
-<a href="https://github.com/KingFelix/emerald/archive/master.zip">Download</a>
-<a href="https://github.com/KingFelix/emerald">Project on Github</a>
+<a href="{{ site.baseurl }}">Blog Home</a>
+<a href="/posts">Index</a>
+<a href="https://github.com/davidlaprade">Github</a>
