--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -9,9 +9,13 @@ li > ul {
 .highlight {
   margin-left: 10px;
   background-color: #f2f2f2;
+  pre {
+    padding-left: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
   code {
     background-color: #f2f2f2;
-    padding: 5px 10px;
   }
 }
 
