--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -11,9 +11,7 @@ li > ul {
   background-color: #f2f2f2;
   pre {
     overflow-x: scroll;
-    padding-left: 25px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 25px;
   }
   code {
     background-color: #f2f2f2;
