Justify blog post text

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,5 +1,9 @@
 /*- Custom style -*/
 
+p {
+  text-align: justify;
+}
+
 // don't add margin to bottom of nested lists
 li > ul {
   margin-bottom: 0px;
