--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,10 @@ layout: default
 
     {{ content }}
 
+    {% if page.comments %}
+      {% include disqus.html %}
+    {% endif %}
+
   </div>
 </article>
 
