--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,6 @@ ga('send', 'pageview');
   <a href="{{ site.baseurl }}">
     <img src="{{ site.baseurl }}/jekyll_img/emerald.svg"  alt="Emerald Logo">
     <h1>David's Blog</h1>
-    <p>Another how-to blog by a software developer</p>
+    <p>Yet another how-to blog by a software developer</p>
   </a>
 </header>
