--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 	<meta name="generator" content="Jekyll">
 
+  <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/jekyll_img/favicon.png">
+
 	<title>{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
 	<!-- CSS & fonts -->
