--- a/jekyll_css/main.scss
+++ b/jekyll_css/main.scss
@@ -3,4 +3,9 @@
 ---
 
 //Import
-@import "base", "mixin", "typography", "layout", "syntax.scss", "custom.scss";
+@import "base",
+"mixin",
+"typography",
+"layout",
+"syntax.scss",
+"custom.scss";
