--- a/_sass/tags.scss
+++ b/_sass/tags.scss
@@ -8,6 +8,7 @@
 
 .tags li {
   float: left;
+  margin-left: 5px;
 }
 
 .tag {
@@ -19,7 +20,7 @@
   line-height: 26px;
   padding: 0 20px 0 23px;
   position: relative;
-  margin: 0 10px 10px 0;
+  margin: 0 0 5px 0;
   text-decoration: none;
   -webkit-transition: color 0.2s;
 }
