--- a/_sass/tags.scss
+++ b/_sass/tags.scss
@@ -16,8 +16,8 @@
   border-radius: 3px 0 0 3px;
   color: #999;
   display: inline-block;
-  height: 26px;
-  line-height: 26px;
+  height: $tag-height;
+  line-height: $tag-height;
   padding: 0 20px 0 23px;
   position: relative;
   margin: 0 0 5px 0;
