Add basic navigation to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,4 +13,9 @@ ga('send', 'pageview');
     <h1>David's Blog</h1>
     <p>Yet another blog by a software developer</p>
   </a>
+  <br>
+  <a href="{{ site.baseurl }}/posts/">Index</a>&nbsp;&nbsp;|&nbsp;
+  <a href="{{ site.baseurl }}">Home</a>&nbsp;|&nbsp;
+  <a href="{{ site.baseurl }}/tags/">Topics</a>
+
 </header>
