--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,14 +8,14 @@ ga('send', 'pageview');
 </script>
 
 <header id="header">
-  <a href="{{ site.baseurl }}">
+  <a href="{{ site.baseurl }}/">
     <img src="{{ site.baseurl }}/jekyll_img/emerald.svg"  alt="Emerald Logo">
     <h1>David's Blog</h1>
     <p>Yet another blog by a software developer</p>
   </a>
   <br>
   <a href="{{ site.baseurl }}/posts/">Index</a>&nbsp;&nbsp;|&nbsp;
-  <a href="{{ site.baseurl }}">Home</a>&nbsp;|&nbsp;
+  <a href="{{ site.baseurl }}/">Home</a>&nbsp;|&nbsp;
   <a href="{{ site.baseurl }}/tags/">Topics</a>
 
 </header>
