--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,3 +1,3 @@
-<a href="{{ site.baseurl }}">Blog Home</a>
 <a href="{{ site.baseurl }}/posts">Index</a>
+<a href="{{ site.baseurl }}/tags">Topics</a>
 <a href="https://github.com/davidlaprade">Github</a>
