Add icons to menu

--- a/_includes/nav-footer.html
+++ b/_includes/nav-footer.html
@@ -1,3 +1,13 @@
 <footer>
 
+  <a href="https://github.com/davidlaprade">
+    <img class="footer-icon" src="{{ site.baseurl }}/jekyll_img/github-icon.png"  alt="Github Logo">
+  </a>
+  <a href="https://www.linkedin.com/in/davidlaprade">
+    <img class="footer-icon" src="{{ site.baseurl }}/jekyll_img/linkedin-icon.png"  alt="LinkedIn Logo">
+  </a>
+  <a href="https://twitter.com/david_laprade">
+    <img class="footer-icon" src="{{ site.baseurl }}/jekyll_img/twitter-icon.png"  alt="Twitter Logo">
+  </a>
+
 </footer>
