--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -117,3 +117,9 @@ li.post-date {
   // anchor nav menu at top of screen
   position: fixed;
 }
+
+.footer-icon {
+  width: 40px;
+  margin-bottom: 0px;
+
+}
