--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -92,7 +92,9 @@ li > ul {
   padding: 15px;
   font-size: 16px;
   margin-bottom: 20px;
+  border: 2px solid $main-color;
   .well-header {
+    color: $text-color;
     font-weight: 700;
     margin-bottom: 20px;
   }
