--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -25,7 +25,7 @@ h1 {
 h2 {
 	font-size: 1.5em; /* 24px/16px */
 	line-height: 1em; /* 24px/24px */
-	padding: 1em 0 0 0; /* 12px/24px * 2, only top (Use padding instead of margin to maintain proximity with paragwithph) */
+	padding: 1em 0; /* 12px/24px * 2, only top (Use padding instead of margin to maintain proximity with paragwithph) */
 }
 
 h3, h4, h5, h6 {
@@ -67,7 +67,7 @@ h1 {
 h2 {
 	font-size: 2em; /* 36px/18px */
 	line-height: 1.3334em; /* 48px/36px */
-	padding: 0.66667em 0 0 0; /* 12px/36px * 2, pnly top (Use padding instead of margin to maintain proximity with paragraph) */
+	padding: 0.66667em 0; /* 12px/36px * 2, pnly top (Use padding instead of margin to maintain proximity with paragraph) */
 }
 
 h3, h4, h5, h6 {
