Fix copyright once and for all

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<footer><span>&copy;2022 - David Laprade</span></footer>
+<footer><span>&copy;{{ "now" | date: "%Y" }} - David Laprade</span></footer>
