--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+{% if site.baseurl != "" %}
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -6,6 +7,7 @@
 ga('create', 'UA-71324846-1', 'auto');
 ga('send', 'pageview');
 </script>
+{% endif %}
 
 <header id="header">
   <a href="{{ site.baseurl }}/">
