Add an email signup form

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,8 @@ layout: default
 
     {{ content }}
 
+    {% include email-signup.html %}
+
     {% if page.comments %}
       {% include disqus.html %}
     {% endif %}
